fix: shift hero bg to show bottom part of image (blueprints area)

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -10,7 +10,7 @@
 
   background-image: url("../img/hero/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center bottom;
   background-repeat: no-repeat;
 }
 
